README - Added some Windows documentation.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/README
+++ b/README
@@ -39,3 +39,71 @@ Pour installer celui-ci, il suffit d'exécuter la commande ci-après.
 ```
 make install
 ```
+
+
+# Compilation Windows
+
+## MinGW
+
+Pour compiler le projet `grap` et son binding python, il faut suivre les
+instructions suivantes.  Tout d'abord, il est nécessaire d'installer Mingw
+(https://sourceforge.net/projects/mingw/files/latest/download?source=files). Une
+fois installé, il faut ouvrir le gestionnaire de paquets (`guimain.exe`) qui se
+situe dans `C:\MinGW\libexec\mingw-get\` et installer les outils suivants.
+
+```
+mingw-developer-toolkit
+mingw32-base
+mingw32-gcc-g++
+msys-base
+msys-system-builder
+```
+
+Puis, il faudra supprimer le paquet `msys-gcc` qui est obsolète. Pour permettre
+l'accès aux binaires de MinGW, il faut ajouter le lien `C:\MinGW\bin` dans le
+`Path`. Les variables d'environnements sous Windows 7 se situent dans
+`Start> (click droit sur computer) Properties> Advanced system settings> (onglet
+Advanced) Environment Variables`. Il ne reste plus qu'à créer une variable
+utilisateur du nom de `Path` avec comme valeur `C:\MinGW\bin`.
+
+
+## Flex + Bison
+
+MinGW possède une version de flex et bison. Cependant, ces outils sont
+obsolètes. Pour remédier à ceci, il faut récupérer une version plus récente sur
+le site https://sourceforge.net/projects/winflexbison/. Une fois le document
+décompressé, il est nécessaire de renommer les deux fichiers `win_bison` et
+`win_flex` en `bison` et `flex`. Enfin il faudra copier les deux binaires avec
+le dossier `data` dans `C:\MinGW\msys\1.0\bin`.
+
+## SWIG
+
+L'installation de SWIG se passe en deux étapes qui sont les suivantes:
+- compilation
+- installation
+
+Pour télécharger le code source de SWIG il faut se rendre à l'adresse suivante
+https://sourceforge.net/projects/swig/files/swigwin/swigwin-3.0.8/swigwin-3.0.8.zip/download?use_mirror=tenet. Puis,
+il faut décompresser l'archive dans le dossier `C:\MinGW\msys\1.0\home\[USER]\`
+et exécuter le script `bat` qui se situe dans le dossier msys
+(`C:\MinGW\msys\1.0\msys.bat`). Enfin, il faudra exécuter les commandes ci-après.
+
+```
+cd swigwin-x.x.x
+./autogen.sh
+./configure --without-pcre
+make
+make install
+```
+
+## Grap
+
+Maintenant que toutes les dépendances sont installées, il ne reste plus qu'à
+installer `grap`. Pour cela il faut ouvrir une console msys, se mettre dans le
+dossier `grap` et exécuter les commandes suivantes.
+
+```
+cmake . -G "MSYS Makefiles" -DPYTHON_BINDING=1
+make
+make install
+```
