--- a/releases/changelogs/v1.2.1
+++ b/releases/changelogs/v1.2.1
@@ -3,4 +3,4 @@ Changed behavior:
 
 Various improvements and bugfixes:
  - IDA pattern search: now follows symbolic links
-
+ - Fixed compiling errors on Windows (removed non-existing "dirent.h" include)
